# deobf-Arxan-Deob-C

./: CMakeLists.txt  README.md  obfudocs.md
src/: array_util.h  deob_context.h  main.c  obfuscation_handler_cjmp.c  obfuscation_handler_cjmp.h  obfuscation_handler_jmp.c  obfuscation_handler_jmp.h  obfuscation_handler_push_pop.c  obfuscation_handler_push_pop.h  obfuscation_handler_ret.c  obfuscation_handler_ret.h  pattern.h  read_file.c  read_file.h  win32_util.c  win32_util.h  x64_util.h
